<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

	<TextView
		android:id="@+id/refresh"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:gravity="center"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<RadioButton
			android:id="@+id/seven"
			android:onClick="seven_onClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="75Hz"
			android:checked="true"/>

		<RadioButton
			android:id="@+id/eight"
			android:onClick="eight_onClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="81Hz"/>

		<RadioButton
			android:id="@+id/custom"
			android:onClick="custom_onClick"
			android:textAllCaps="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/custom"/>

	</LinearLayout>

	<TextView
		android:id="@+id/custom_tips"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/custom_tips"
		android:visibility="gone"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<EditText
			android:id="@+id/custom_input"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/custom_input"
			android:gravity="center"
			android:visibility="gone"
			android:singleLine="true"/>

		<Button
			android:id="@+id/custom_select"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/custom_select"
			android:textAllCaps="false"
			android:onClick="select_onClick"
			android:visibility="gone"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="install"
			android:textAllCaps="false"
			android:text="@string/install"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="uninstall"
			android:textAllCaps="false"
			android:text="@string/uninstall"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="test"
			android:textAllCaps="false"
			android:text="@string/test"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="join"
			android:textAllCaps="false"
			android:text="@string/join_group"/>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:onClick="atomSand"
		android:text="@string/atom_sand"
		android:gravity="center"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="pay"
			android:textAllCaps="false"
			android:text="@string/pay"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAllCaps="false"
			android:onClick="pay_atomSand"
			android:text="@string/pay_atom_sand"/>

	</LinearLayout>

</LinearLayout>

